fix: Contrast issues w/ black and brown text in Rose theme
Fixes #339

--- a/scss/themes/chat/wilted-rose.scss
+++ b/scss/themes/chat/wilted-rose.scss
@@ -13,7 +13,7 @@ $yellow-color: $rose-yellow;
 $purple-color: $rose-purple;
 $cyan-color: $rose-cyan;
 $white-color: $gray-800;
-$black-color: #2f2128;
+$black-color: #94687e;
 $brown-color: $rose-brown;
 $pink-color: $rose-pink;
 $gray-color: #898689;
@@ -83,7 +83,7 @@ body,
 $genders: (
   'shemale': $rose-magenta,
   'herm': $rose-purple,
-  'none': color.scale($black-color, $lightness: 40%),
+  'none': $black-color,
   'female': $rose-pink,
   'male': $rose-blue,
   'male-herm': $rose-cyan,
