--- a/scss/themes/variables/_rose_variables.scss
+++ b/scss/themes/variables/_rose_variables.scss
@@ -26,7 +26,7 @@ $rose-purple: #bd93f9;
 $rose-orange: #ff9500;
 $rose-magenta: #61364b;
 $rose-cyan: #81ebed;
-$rose-brown: #4a2330;
+$rose-brown: #d2908d;
 $rose-pink: #f8d7da;
 
 $primary: #61364b;
